-fixed style corruption on mobile view

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -321,12 +321,20 @@ textarea {
     padding: 0 20px;
     box-sizing: border-box;
 }
+
+.edit-input-style {
+  margin-top: 7px !important;
+}
+
+.edit-mobile {
+  margin-top: 30px;
+}
+
 .sync-check {
   color: #48a5d3;
   margin-top: 25px;
   margin-bottom: 20px;
 }
-
 
 /* ERROR STYLES ---------------------------
 -------------------------------------------*/
